apps/gitea-mirror/base/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitea-mirror
spec:
  replicas: 1
  serviceName: gitea-mirror
  selector:
    matchLabels:
      app.kubernetes.io/instance: gitea-mirror
      app.kubernetes.io/name: gitea-mirror
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: gitea
        app.kubernetes.io/name: gitea-mirror
    spec:
      containers:
        - name: gitea-mirror
          image: gitea-mirror
          ports:
            - name: http
              containerPort: 4321
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 10
            failureThreshold: 180
          volumeMounts:
            - name: data
              mountPath: /app/data
      securityContext:
        fsGroup: 1000
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gitea-mirror-data
