apps/gitea-mirror/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-mirror
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: gitea-mirror
    app.kubernetes.io/name: gitea-mirror
