apps/gitea-mirror/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-mirror
spec:
  defaultBackend:
    service:
      name: gitea-mirror
      port:
        name: http
