apps/gitea-mirror/base/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gitea-mirror
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: forgejo
      ports:
        - port: http
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: gitea-mirror
      app.kubernetes.io/name: gitea-mirror
  policyTypes:
    - Ingress
